# android-opencv-opengl-assessment

./: .gitignore
EdgeDetectionApp/app/: build.gradle.kts
EdgeDetectionApp/app/src/main/: AndroidManifest.xml
EdgeDetectionApp/app/src/main/cpp/: CMakeLists.txt  edgedetectionapp.cpp  native-lib.cpp
EdgeDetectionApp/app/src/main/java/com/example/edgedetectionapp/: MainActivity.kt
EdgeDetectionApp/app/src/main/java/com/example/edgedetectionapp/ui/theme/: Color.kt  Theme.kt  Type.kt
EdgeDetectionApp/app/src/main/res/xml/: backup_rules.xml
EdgeDetectionApp/gradle/: libs.versions.toml
EdgeDetectionApp/gradle/wrapper/: gradle-wrapper.properties
EdgeDetectionApp/opencv/sdk/: build.gradle.kts
